# esphome_ai_component

./: .clang-tidy  .flake8  .gitignore  .pre-commit-config.yaml  .yamllint  AI-On-The-Edge-Cam_Esp32-S3.yaml  CODEOWNERS  MODEL_COMPARISON_TEST.md  PROJECT_WORKFLOW.md  README.md  SECURITY.md  WORKING_CONFIG_SUMMARY.md  analog_reader_controls.yaml  api_AI_component.yaml  board_AI-On-The-Edge-Cam_Esp32-S3.yaml  board_Seeed_Studio_XIAO_ESP32-S3_sense.yaml  board_esp32cam_aithinker.yaml  board_freenove_esp32-s3-n8r8.yaml  board_generic_esp32-s3-n16r8.yaml  board_m5stack_psram.yaml  board_wrover_kit.yaml  button_AI_component.yaml  camera_options.yaml  camera_webserver.yaml  compile_log.txt  config.yaml  config_analog_reader_test.yaml  config_ssocr_test.yaml  debug_board.yaml  digit_recognizer_v4_10cls_GRAY.tflite  esp32_camera.yaml  esp32_camera_utils_controls.yaml  flake8_errors.txt  fuzz_build.py  fuzz_parallel.py  globals.yaml  globals_AI_component.yaml  host_config.yaml  host_debug.yaml  lan.yaml  (+18 more)
.ai/: instructions.md  instructions.yaml
.github/    ISSUE_TEMPLATE  /: bug_report.md  feature_request.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.md_old  bug_report.yml  config.yml
.github/workflows/: ci.yml  ci.yml_disabled  static.yml_disabled
.greptile/: rules.md
LOCAL_COMPONENT_CHANGES/: CHANGES_DOCUMENTATION.md  component_diffs.txt
boards/: board_AI-On-The-Edge-Cam_Esp32-S3.yaml  board_Seeed_Studio_XIAO_ESP32-S3_sense.yaml  board_esp32cam_aithinker.yaml  board_freenove_esp32-s3-n8r8.yaml  board_generic_esp32-s3-n16r8.yaml  board_m5stack_psram.yaml  board_wrover_kit.yaml
camera_roi_tool/: index.html
components/analog_reader/: README.md  __init__.py  algo_hough.md  algo_radial.md  algo_template.md  algo_template_matching.md  analog_reader.cpp  analog_reader.h  analog_reader_algo_hough.md  analog_reader_algo_legacy.md  analog_reader_algo_radial.md  analog_reader_controls.yaml  camera_coordinator.cpp  camera_coordinator.h  detect_legacy.cpp  flashlight_coordinator.cpp  flashlight_coordinator.h  manifest.json  multi_algorithm.cpp  value_validator.cpp  value_validator.h  value_validator_coordinator.cpp  value_validator_coordinator.h
components/data_collector/: README.md  __init__.py  data_collector.cpp  data_collector.h  manifest.json
components/esp32_camera_utils/: README.md  __init__.py  buffer_pool.cpp  buffer_pool.h  camera_window_control.cpp  camera_window_control.h  crop_zone_handler.cpp  crop_zone_handler.h  cropper.cpp  cropper.h  debug_utils.h  drawing_utils.cpp  drawing_utils.h  esp32_camera_utils.cpp  esp32_camera_utils.h  esp32_camera_utils_controls.yaml  image_processor.cpp  image_processor.h  manifest.json  preview_web_handler.cpp  preview_web_handler.h  rotator.cpp  rotator.h  scaler.cpp  scaler.h
components/flash_light_controller/: README.md  __init__.py  flash_light_controller.cpp  flash_light_controller.h  flash_light_controller_controls.yaml  manifest.json
components/legacy_meter_reader_tflite/: README.md  __init__.py  camera_control.cpp  camera_control.h  crop_zones.cpp  crop_zones.h  debug_utils.h  image_processor.cpp  image_processor.h  manifest.json  memory_manager.cpp  memory_manager.h  meter_reader_tflite.cpp  meter_reader_tflite.h  model_config.h  model_handler.cpp  model_handler.h  op_resolver.h  output_validation.cpp  output_validation.h  tflm_operators.h
components/meter_reader_tflite/: README.md  __init__.py  camera_control.cpp  camera_control.h  camera_coordinator.cpp  camera_coordinator.h  crop_web_handler.cpp  crop_web_handler.h  crop_zones.cpp  crop_zones.h  debug_coordinator.cpp  debug_coordinator.h  flashlight_coordinator.cpp  flashlight_coordinator.h  header.cpp  image_processor.cpp  manifest.json  meter_reader_tflite.cpp  meter_reader_tflite.h  meter_reader_tflite_controls.yaml  model_config.h  model_handler.cpp  model_handler.h  op_resolver.h  tflite_coordinator.cpp  tflite_coordinator.h  value_validator.cpp  value_validator.h  value_validator_coordinator.cpp  value_validator_coordinator.h
docs/: analog_reader.rst  data_collector.rst  esp32_camera_utils.rst  flash_light_controller.rst  index.rst  meter_reader_tflite.rst  ssocr_reader.rst  tflite_micro_helper.rst  value_validator.rst
draw_regions/: analog.html  digits.html  index.html  index_v0.html  index_v1.html  ov2640_windowing.md  readme.md  roi.html
draw_regions/old/: index_v2.html  (+1 more)
models/: dig-class100-0180-s2-q.tflite.txt  digit_recognizer_v16_10cls_GRAY.tflite  digit_recognizer_v16_10cls_GRAY.txt  digit_recognizer_v16_10cls_RGB.tflite  digit_recognizer_v16_10cls_RGB.txt  digit_recognizer_v16_quantized_integer_quant_uint8.tflite  digit_recognizer_v16_quantized_integer_quant_uint8.txt  digit_recognizer_v17_10cls_RGB.tflite  digit_recognizer_v17_10cls_RGB.txt  digit_recognizer_v23_10cls_RGB.tflite  digit_recognizer_v23_10cls_RGB.txt  digit_recognizer_v23_10cls_RGB_TQT.tflite  digit_recognizer_v23_10cls_RGB_TQT.txt  digit_recognizer_v23_quantized_integer_quant_uint8.tflite  digit_recognizer_v23_quantized_integer_quant_uint8.txt  digit_recognizer_v24_10cls_RGB_TQT.txt  digit_recognizer_v24_quantized_integer_quant_uint8.tflite  digit_recognizer_v24_quantized_integer_quant_uint8.txt  digit_recognizer_v27_10cls_RGB.tflite  digit_recognizer_v27_10cls_RGB.txt  digit_recognizer_v3_10cls_RGB.tflite  digit_recognizer_v3_10cls_RGB.txt  digit_recognizer_v3_quantized_integer_quant_uint8.tflite  digit_recognizer_v3_quantized_integer_quant_uint8.txt  digit_recognizer_v4_100cls_GRAY.tflite  digit_recognizer_v4_100cls_GRAY.txt  digit_recognizer_v4_100cls_RGB.tflite  digit_recognizer_v4_100cls_RGB.txt  digit_recognizer_v4_10cls_GRAY.txt  digit_recognizer_v4_10cls_RGB.tflite  digit_recognizer_v4_10cls_RGB.txt
rotate_roi_tool/: index.html  index_v2.html  readme.md
script/: ci-custom.py  fix_nonascii.py  helpers.py  run_lint.py
tools/: analyze_peak_memory.py  analyze_serial_output.py  check_tflite_model.py  draw_regions.py  generate_test_image.py  list_ops.py  regenerate_txt_reports.py  regions.json
wiki/: Crop Zones and Performance.md  Debugging.md  boards.md  setup.md
(+87 files in other folders)
