[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name        = "esphome_ai_component"
license     = "MIT"
description = "ESPHome AI Component - TensorFlow Lite Micro and computer vision on ESP32"
readme      = "README.md"

requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["components*"]

[tool.pylint.MAIN]
py-version = "3.11"
persistent = false

[tool.pylint.REPORTS]
score = false

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "format",
  "missing-docstring",
  "fixme",
  "unused-argument",
  "global-statement",
  "too-few-public-methods",
  "too-many-lines",
  "too-many-locals",
  "too-many-ancestors",
  "too-many-branches",
  "too-many-statements",
  "too-many-arguments",
  "too-many-positional-arguments",
  "too-many-return-statements",
  "too-many-instance-attributes",
  "duplicate-code",
  "invalid-name",
  "cyclic-import",
  "redefined-builtin",
  "undefined-loop-variable",
  "useless-object-inheritance",
  "stop-iteration-return",
  "import-outside-toplevel",
  # Broken
  "unsupported-membership-test",
  "unsubscriptable-object",
]

[tool.pylint.FORMAT]
expected-line-ending-format = "LF"

[tool.ruff]
required-version = ">=0.5.0"
target-version = "py311"
exclude = ['generated', '.esphome', 'venv']

[tool.ruff.lint]
select = [
  "B",    # flake8-bugbear
  "BLE",  # flake8-blind-except
  "C4",   # flake8-comprehensions
  "DTZ",  # flake8-datetimez
  "E",    # pycodestyle
  "EXE",  # flake8-executable
  "F",    # pyflakes/autoflake
  "FA",   # flake8-future-annotations
  "FLY",  # flynt: convert string formatting to f-strings
  "FURB", # refurb
  "G",    # flake8-logging-format
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "NPY",  # numpy-specific rules
  "PERF", # performance
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PTH",  # flake8-use-pathlib
  "PYI",  # flake8-pyi
  "Q",    # flake8-quotes
  "RSE",  # flake8-raise
  "SIM",  # flake8-simplify
  "SLOT", # flake8-slots
  "RET",  # flake8-ret
  "T10",  # flake8-debugger
  "UP",   # pyupgrade
  "W",    # pycodestyle warnings
  "YTT",  # flake8-2020
]

ignore = [
  "E501", # line too long
  "PLC0415", # `import` should be at the top-level of a file
  "PLR0911", # Too many return statements
  "PLR0912", # Too many branches
  "PLR0913", # Too many arguments to function call
  "PLR0915", # Too many statements
  "PLW1641", # Object does not implement `__hash__` method
  "PLR2004", # Magic value used in comparison
  "PLW2901", # Outer variable overwritten by inner target
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = [
  "esphome",
]
combine-as-imports = true
split-on-trailing-comma = false